# real-estate-service

./: README.md
app_real_estate/: pyproject.toml
app_real_estate/app_real_estate/: Dockerfile  docker-compose.yaml  nginx.conf  prometheus.yml  requirements.txt
app_real_estate/app_real_estate/backend/: main.py
app_real_estate/app_real_estate/backend/api/: __init__.py
app_real_estate/app_real_estate/backend/auth/: __init__.py  auth.py
app_real_estate/app_real_estate/backend/core/: __init__.py  config.py  custom_paginate.py  validators.py
app_real_estate/app_real_estate/backend/crud/: __init__.py  blog.py  category.py  comment.py  feedback_user.py  main_site.py  posts_user.py  profile.py  property.py  rating_user.py  refresh.py  user.py
app_real_estate/app_real_estate/backend/db/: __init__.py  base_class.py  db_helper.py  db_init.py  main_site.json
app_real_estate/app_real_estate/backend/models/: __init__.py  (+9 more)
app_real_estate/front_real_estate/: docker-compose.yaml  nginx.conf
app_real_estate/front_real_estate/frontend/: .dockerignore  Dockerfile  index.html  package.json  webpack.config.js
app_real_estate/tests/: conftest.py  utils.py
app_real_estate/tests/test_api/: factories.py  test_category.py  test_posts.py  test_profile.py  test_property.py  test_rating_user.py  test_token.py  test_user.py
app_real_estate/tests/test_auth/: test_auth.py
app_real_estate/tests/test_database/: test_category.py  test_posts_user.py  test_profile.py  test_property.py  test_rating_user.py  test_user.py
app_real_estate/tests/test_websockets/: test_websockets.py
(+69 files in other folders)
